# MdParcel

./: .gitignore  Cargo.toml  README.md  test1.md
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: editor-core.js  main.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/test/: editor-core.test.js
src/: archive.rs  lib.rs  main.rs  manifest.rs  markdown.rs
