[package]
name = "mdparcel"
version = "0.1.0"
edition = "2024"
description = "Portable Markdown document packages"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
zip = "2.2"
